# rust-demo-node-modules

./: .editorconfig  .envrc.example  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json  types.d.ts
.cargo/: config.toml
lib/jwt_rsa/: .gitignore  Cargo.toml  build.rs  package.json
lib/jwt_rsa/npm/darwin-x64/: README.md  package.json
lib/jwt_rsa/npm/linux-x64-gnu/: README.md  package.json
lib/jwt_rsa/npm/win32-x64-msvc/: README.md  package.json
lib/jwt_rsa/src/: authorizer.rs  errors.rs  lib.rs  outputs.rs
lib/text_classification/: .gitignore  pyproject.toml  train.py  trainer.py
lib/text_classification/scripts/: infer.py  run_infer.py  train.py
lib/text_classification/src/text_classification/: inference.py  trainer.py  utils.py
lib/text_classification_rs/: .gitignore  Cargo.toml  build.rs  package.json
lib/text_classification_rs/src/: infer.rs  lib.rs
src/: classify.ts  jwt.ts  main.ts  router.ts
test/: user.int.test.ts
