[tool.poetry]
name = "text-classification"
version = "0.0.1"
description = "Simple text classification training workflow"
authors = ["Brandon Konkle <brandon@konkle.us>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.4.1"
transformers = "^4.44.2"
datasets = "^3.0.0"
numpy = "^1.26.4"
huggingface-hub = "^0.25.0"
evaluate = "^0.4.3"
accelerate = "^0.34.2"
scikit-learn = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
